--- a/src/bioregistry/app/templates/home.html
+++ b/src/bioregistry/app/templates/home.html
@@ -81,7 +81,7 @@
                     <h5 class="mb-1"><i class="fas fa-list"></i> View Registry</h5>
                     <small class="text-muted">{{ "{:,}".format(registry_size) }} entries</small>
                 </div>
-                <p class="mb-1">The integrative registry of databases, ontologies, and resources.</p>
+                <p class="mb-1">The integrative registry of databases, ontologies, and resources that assign (persistent) identifiers.</p>
             </a>
             <a href="{{ url_for('metaregistry_ui.metaresources') }}"
                class="list-group-item list-group-item-action flex-column align-items-start">
