--- a/src/bioregistry/app/templates/meta/related.html
+++ b/src/bioregistry/app/templates/meta/related.html
@@ -52,7 +52,8 @@
 {% block content %}
     <h2>Comparison of Registries</h2>
     <p>
-        An overview on registries covering biomedical ontologies, controlled vocabularies, and databases.
+        An overview on registries covering ontologies, controlled vocabularies, databases, and
+        other resources that mint (persistent) identifiers.
     </p>
     <h3>Data Models</h3>
     <p>
@@ -155,14 +156,14 @@
         <dt>CURIE Resolver</dt>
         <dd>
             This field denotes if the registry can act as a resolver, i.e., it redirects to an external
-            page about a given biomedical concept or entity based on its CURIE and
+            page about a given concept or entity based on its CURIE and
             the registry's internal metadata data about the prefix's associated
             URI format string.
         </dd>
         <dt>CURIE Lookup</dt>
         <dd>
             This field denotes if the registry act as a lookup service, i.e., it gives information
-            about a given biomedical concept or entity based on its CURIE.
+            about a given concept or entity based on its CURIE.
         </dd>
     </dl>
     <table id="comparison-capabilities" class="table table-striped table-hover table-sm">
