--- a/src/bioregistry/app/templates/base.html
+++ b/src/bioregistry/app/templates/base.html
@@ -48,7 +48,7 @@
 <body {% block bodyattr %}{% endblock %}>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{{ url_for("metaregistry_ui.home") }}">
-        <img src="{{ url_for('static', filename='logo.svg') }}" width="30" height="30" alt="">
+        <img src="{{ url_for('static', filename='logo.svg') }}" width="30" height="30" alt="{{ config.METAREGISTRY_TITLE }} logo">
         {{ config.METAREGISTRY_TITLE }}
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
